src/snapshots/droid_tui__regression__visual_physical_full_multirow_rack_snapshot@physical_full_multirow_rack_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                             DROID: physical_multirow_rack                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐┌──┐┌──┐┌──┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┌──┐┌──┐┌────┐┐
◉ ◉…◉ ◉…◉ ◉…◉ ◉…◉◉P…◉◉… ◉◉… ◉◉…◉ ◉…◉ ◉…◉ ◉…◉ ◉…◉ ◉…◉◉P…◉◉… ◉◉…  CV …
0%0%0%0%0%0%0%0%00%│00%│00%│00%0%0%0%0%0%0%0%0%0%0%00%│00%│00%│    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│○○│○○○│○○○│○○○│○○○│○○○│○○○│○○││○○│○○○│○○○│○○○│○○○│○○○│○○○│○○○│    ││
│……│… …│… …│… …│…… │……││……││……││……│… …│… …│… …│… …│…… │……││……││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│○○│○ ○│○ ○│○ ○│○○ │○○││○○││○○││○○│○ ○│○ ○│○ ○│○ ○│○○ │○○││○○││◀   ││
│○○│…○○│…○○│…○○│○…○│○…○│○…○│○○││○○│…○○│…○○│…○○│…○○│○…○│○…○│○…○│…   ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│○○│○○○│○○○│○○○│○○○│○○○│○○○│○○││○○│○○○│○○○│○○○│○○○│○○○│○○○│○○○│    ││
│……│… …│… …│… …│…… │……││……││……││……│… …│… …│… …│… …│…… │……││……││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│○○│○ ○│○ ○│○ ○│○○ │○○││○○││○○││○○│○ ○│○ ○│○ ○│○ ○│○○ │○○││○○││    ││
│○○│…○○│…○○│…○○│○…○│○…○│○…○│○○││○○│…○○│…○○│…○○│…○○│○…○│○…○│○…○│    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
│  ││  ││  ││  ││  │  ││  ││  ││  ││  ││  ││  ││  ││  │  ││  ││    ││
└──┘└──┘└──┘└──┘└──└──┘└──┘└──┘└──┘└──┘└──┘└──┘└──┘└──└──┘└──┘└────┘┘




























┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 310 cols or reduce scale | Scale: 1.0 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
