src/snapshots/droid_tui__regression__visual_physical_skeleton_arpeggio_snapshot@physical_skeleton_arpeggio_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                   DROID: arpeggio1                                                   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌────┐┐
· ·││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│··││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│··│◀  ▶ ││
│··││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│··││    ││
│  ││    ││
│  ││    ││
└──┘└──▶─┘┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded arpeggio1 | Renders degraded at 120 cols — use ≥ 228 cols or reduce scale | Scale: 1.0 | Orientation: Portrait │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
