src/snapshots/droid_tui__regression__visual_physical_skeleton_arpeggio_snapshot@physical_skeleton_arpeggio_mono_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                               DROID: arpeggio1                               │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌────┐┐
· ·││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│··││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│··│◀  ▶ ││
│··││    ││
│  ││    ││
│  ││    ││
│  ││    ││
│··││    ││
│  ││    ││
│  ││    ││
└──┘└──▶─┘┘
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 228 │
└──────────────────────────────────────────────────────────────────────────────┘
