src/snapshots/droid_tui__regression__visual_physical_skeleton_multi_module_snapshot@physical_skeleton_multi_module_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                           DROID: multi_module_p2b8                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐
· ·│· ·│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│··│···│
│  ││  │
│  ││  │
│  ││  │
│··│· ·│
│··││··│
│  ││  │
│  ││  │
│  ││  │
│··│···│
│  ││  │
│  ││  │
│  ││  │
│··│· ·│
│··││··│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
└──┘└──┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Loaded multi_module_p2b8 | Renders degraded at 80 cols — use ≥ 292 cols or red│
└──────────────────────────────────────────────────────────────────────────────┘
