src/snapshots/droid_tui__regression__visual_physical_skeleton_multi_module_snapshot@physical_skeleton_multi_module_mono_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                           DROID: multi_module_p2b8                           │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐
· ·│· ·│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│··│···│
│  ││  │
│  ││  │
│  ││  │
│··│· ·│
│··││··│
│  ││  │
│  ││  │
│  ││  │
│··│···│
│  ││  │
│  ││  │
│  ││  │
│··│· ·│
│··││··│
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
│  ││  │
└──┘└──┘
┌──────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 80 cols — use ≥ 292 │
└──────────────────────────────────────────────────────────────────────────────┘
