src/snapshots/droid_tui__regression__visual_physical_skeleton_multirow_rack_snapshot@physical_skeleton_multirow_rack_classic_80.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────┐
│                         DROID: physical_multirow_rack                        │
└──────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐┌──┐┌─┐─┌─┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌─┐─┌─┐┌──┐┌──┐┌────┐┐
· ·│· ·│· ·│· · ··││··││··││··│· ·│· ·│· ·│· ·│· · ··││··││··││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│···│···│··· ···│···│···│··││··│···│···│···│··· ···│···│···│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│· ·│· ·│· · ··││··││··││··││··│· ·│· ·│· ·│· · ··││··││··││◀   ││
│··││··││··││·· · ·│· ·│· ·│··││··││··││··││··││·· · ·│· ·│· ·│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│···│···│··· ···│···│···│··││··│···│···│···│··· ···│···│···│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│· ·│· ·│· · ··││··││··││··││··│· ·│· ·│· ·│· · ··││··││··││    ││
│··││··││··││·· · ·│· ·│· ·│··││··││··││··││··││·· · ·│· ·│· ·│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
└──┘└──┘└──┘└─┘─└─┘└──┘└──┘└──┘└──┘└──┘└──┘└──┘└─┘─└─┘└──┘└──┘└────┘┘




























┌──────────────────────────────────────────────────────────────────────────────┐
│Loaded physical_multirow_rack | Renders degraded at 80 cols — use ≥ 310 cols o│
└──────────────────────────────────────────────────────────────────────────────┘
