src/snapshots/droid_tui__regression__visual_physical_skeleton_multirow_rack_snapshot@physical_skeleton_multirow_rack_mono_120.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                             DROID: physical_multirow_rack                                            │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──┐┌──┐┌──┐┌─┐─┌─┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌──┐┌─┐─┌─┐┌──┐┌──┐┌────┐┐
· ·│· ·│· ·│· · ··││··││··││··│· ·│· ·│· ·│· ·│· · ··││··││··││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│···│···│··· ···│···│···│··││··│···│···│···│··· ···│···│···│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│· ·│· ·│· · ··││··││··││··││··│· ·│· ·│· ·│· · ··││··││··││◀   ││
│··││··││··││·· · ·│· ·│· ·│··││··││··││··││··││·· · ·│· ·│· ·│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│···│···│··· ···│···│···│··││··│···│···│···│··· ···│···│···│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│··│· ·│· ·│· · ··││··││··││··││··│· ·│· ·│· ·│· · ··││··││··││    ││
│··││··││··││·· · ·│· ·│· ·│··││··││··││··││··││·· · ·│· ·│· ·│    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
│  ││  ││  ││ │ │ ││  ││  ││  ││  ││  ││  ││  ││ │ │ ││  ││  ││    ││
└──┘└──┘└──┘└─┘─└─┘└──┘└──┘└──┘└──┘└──┘└──┘└──┘└─┘─└─┘└──┘└──┘└────┘┘




























┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded physical_multirow_rack | Renders degraded at 120 cols — use ≥ 310 cols or reduce scale | Scale: 1.0 | Orientati│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
